--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+reclamation_list:
+   path: /reclamations
+   controller: App\Controller\ReclamationController::list
