--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=802f27cfb570d6d8ef583967fad0962c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/storeship22?"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/storeship33?"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -33,6 +33,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/storeship22?"
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+
+TWILIO_ACCOUNT_SID=ACbc46db0068633b4bdf2fd949f0c11672
+TWILIO_AUTH_TOKEN=9643c540afdca75b4292a165c046a2a6
+TWILIO_PHONE_NUMBER=+16812025444
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
