--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -19,6 +19,13 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    twilio.client:
+        class: Twilio\Rest\Client
+        arguments:
+            - '%env(TWILIO_ACCOUNT_SID)%'
+            - '%env(TWILIO_AUTH_TOKEN)%'
+    Twilio\Rest\Client: '@twilio.client'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
