--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,27 +1,27 @@
-vich_uploader:
-    metadata:
-                type: attribute
-    db_driver: orm
-    mappings:
-        user_image:
-            uri_prefix:         /images/users
-            upload_destination: '%kernel.project_dir%/public/images/users'
-            namer:   Vich\UploaderBundle\Naming\OrignameNamer
-            delete_on_update: true
-            delete_on_remove: true
-        product_image:
-            uri_prefix:         /images/products
-            upload_destination: '%kernel.project_dir%/public/images/products'
-            namer:  Vich\UploaderBundle\Naming\OrignameNamer
-        event_image:
-            uri_prefix:         /images/events
-            upload_destination: '%kernel.project_dir%/public/images/events'
-            namer:  Vich\UploaderBundle\Naming\OrignameNamer
-        store_image:
-            uri_prefix:         /images/stores
-            upload_destination: '%kernel.project_dir%/public/images/stores'
-            namer:  Vich\UploaderBundle\Naming\OrignameNamer
-        reclamation_image:
-            uri_prefix:         /images/reclamations
-            upload_destination: '%kernel.project_dir%/public/images/reclamations'
-            namer:  Vich\UploaderBundle\Naming\OrignameNamer
+# vich_uploader:
+#     metadata:
+#                 type: attribute
+#     db_driver: orm
+#     mappings:
+#         user_image:
+#             uri_prefix:         /images/users
+#             upload_destination: '%kernel.project_dir%/public/images/users'
+#             namer:   Vich\UploaderBundle\Naming\OrignameNamer
+#             delete_on_update: true
+#             delete_on_remove: true
+#         product_image:
+#             uri_prefix:         /images/products
+#             upload_destination: '%kernel.project_dir%/public/images/products'
+#             namer:  Vich\UploaderBundle\Naming\OrignameNamer
+#         event_image:
+#             uri_prefix:         /images/events
+#             upload_destination: '%kernel.project_dir%/public/images/events'
+#             namer:  Vich\UploaderBundle\Naming\OrignameNamer
+#         store_image:
+#             uri_prefix:         /images/stores
+#             upload_destination: '%kernel.project_dir%/public/images/stores'
+#             namer:  Vich\UploaderBundle\Naming\OrignameNamer
+#         reclamation_image:
+#             uri_prefix:         /images/reclamations
+#             upload_destination: '%kernel.project_dir%/public/images/reclamations'
+#             namer:  Vich\UploaderBundle\Naming\OrignameNamer
